--- a/html/generate-forgetting-curve-with-task-duration.html
+++ b/html/generate-forgetting-curve-with-task-duration.html
@@ -32,7 +32,7 @@
 
 <div class="controls">
     <label>开始学习日期:
-        <input type="date" id="start-date" value="2025-08-10">
+        <input type="date" id="start-date" value="2025-08-11">
     </label>
 
     <div id="tasks-container">
@@ -52,7 +52,7 @@
     </label>
 
     <label>休息日（YYYY-MM-DD，逗号分隔）:
-        <input type="text" id="rest-days" value="2025-08-20,2025-08-25,2025-08-26,2025-08-31,2025-09-01,2025-09-02,2025-09-05,2025-09-06,2025-09-07,2025-09-11,2025-09-12,2025-09-13" class="rest-input">
+        <input type="text" id="rest-days" value="2025-08-29,2025-08-30,2025-09-02,2025-09-03,2025-09-04,2025-09-05,2025-09-09,2025-09-10,2025-09-11,2025-09-13,2025-09-16,2025-09-19,2025-09-20,2025-09-28,2025-09-30,2025-10-08,2025-10-09,2025-10-11,2025-10-12,2025-10-14,2025-10-17" class="rest-input">
     </label>
 
     <div>
@@ -88,17 +88,17 @@
   const addRoundBtn=document.getElementById('add-round-btn');
 
   const defaultTasks=[
-    { name:'行列式', duration:3 },
+    { name:'行列式', duration:4 },
     { name:'矩阵', duration:4 },
-    { name:'向量', duration:3 },
-    { name:'线性方程组', duration:3 },
+    { name:'向量', duration:4 },
+    { name:'线性方程组', duration:4 },
     { name:'特征值与特征向量', duration:4 },
-    { name:'二次型', duration:3 },
-    { name:'函数、极限、连续', duration:3 },
+    { name:'二次型', duration:4 },
+    { name:'函数、极限、连续', duration:4 },
     { name:'一元函数微分学', duration:4 },
-    { name:'一元函数积分学', duration:3 },
+    { name:'一元函数积分学', duration:4 },
     { name:'多元函数微分学', duration:4 },
-    { name:'二重积分', duration:3 },
+    { name:'二重积分', duration:4 },
     { name:'常微分方程', duration:4 }
   ];
 
