feat: add 012 write

--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -96,19 +96,19 @@
     { name:'限定词', duration:1 },
     { name:'形容词、副词', duration:1 },
     { name:'介词短语', duration:1 },
-    { name:'同位语插入语', duration:1 },
+    { name:'同位语、插入语', duration:1 },
     { name:'非谓语动词做主宾表', duration:1 },
     { name:'非谓语动词做定状', duration:1 },
     { name:'并列句', duration:1 },
-    { name:'主从复合句&宾语从句', duration:1 },
-    { name:'标语从句', duration:1 },
+    { name:'宾语从句', duration:1 },
+    { name:'表语从句', duration:1 },
     { name:'主语从句', duration:1 },
     { name:'同位语从句', duration:1 },
     { name:'定语从句', duration:2 },
     { name:'状语从句', duration:2 },
-    { name:'特殊句式虚拟', duration:1 },
-    { name:'特殊句式倒装', duration:1 },
-    { name:'特殊句式强调', duration:1 },
+    { name:'虚拟', duration:1 },
+    { name:'倒装', duration:1 },
+    { name:'强调', duration:1 },
     { name:'断开长难句-标点', duration:1 },
     { name:'断开长难句-连接词', duration:1 },
     { name:'分析主谓', duration:1 },
