--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -87,50 +87,50 @@
   const roundsDiv=document.getElementById('rounds-div');
   const addRoundBtn=document.getElementById('add-round-btn');
 
-  const defaultTasks=[
-    { name:'简单句的核心构成', duration:1 },
-    { name:'谓语动词时态', duration:1 },
-    { name:'谓语动词情态', duration:1 },
-    { name:'谓语动词语态', duration:1 },
-    { name:'谓语动词否定和强调', duration:1 },
-    { name:'限定词', duration:1 },
-    { name:'形容词、副词', duration:1 },
-    { name:'介词短语', duration:1 },
-    { name:'同位语、插入语', duration:1 },
-    { name:'非谓语动词做主宾表', duration:1 },
-    { name:'非谓语动词做定状', duration:1 },
-    { name:'并列句', duration:1 },
-    { name:'宾语从句', duration:1 },
-    { name:'表语从句', duration:1 },
-    { name:'主语从句', duration:1 },
-    { name:'同位语从句', duration:1 },
-    { name:'定语从句', duration:2 },
-    { name:'状语从句', duration:2 },
-    { name:'虚拟', duration:1 },
-    { name:'倒装', duration:1 },
-    { name:'强调', duration:1 },
-    { name:'断开长难句-标点', duration:1 },
-    { name:'断开长难句-连接词', duration:1 },
-    { name:'分析主谓', duration:1 },
-    { name:'简化长难句', duration:1 },
-    { name:'分裂结构', duration:1 },
-    { name:'嵌套结构', duration:1 },
-    { name:'平行结构', duration:1 },
-  ];
   // const defaultTasks=[
-  //   { name:'行列式', duration:4 },
-  //   { name:'矩阵', duration:4 },
-  //   { name:'向量', duration:4 },
-  //   { name:'线性方程组', duration:4 },
-  //   { name:'特征值与特征向量', duration:4 },
-  //   { name:'二次型', duration:4 },
-  //   { name:'函数、极限、连续', duration:4 },
-  //   { name:'一元函数微分学', duration:4 },
-  //   { name:'一元函数积分学', duration:4 },
-  //   { name:'多元函数微分学', duration:4 },
-  //   { name:'二重积分', duration:4 },
-  //   { name:'常微分方程', duration:4 }
+  //   { name:'简单句的核心构成', duration:1 },
+  //   { name:'谓语动词时态', duration:1 },
+  //   { name:'谓语动词情态', duration:1 },
+  //   { name:'谓语动词语态', duration:1 },
+  //   { name:'谓语动词否定和强调', duration:1 },
+  //   { name:'限定词', duration:1 },
+  //   { name:'形容词、副词', duration:1 },
+  //   { name:'介词短语', duration:1 },
+  //   { name:'同位语、插入语', duration:1 },
+  //   { name:'非谓语动词做主宾表', duration:1 },
+  //   { name:'非谓语动词做定状', duration:1 },
+  //   { name:'并列句', duration:1 },
+  //   { name:'宾语从句', duration:1 },
+  //   { name:'表语从句', duration:1 },
+  //   { name:'主语从句', duration:1 },
+  //   { name:'同位语从句', duration:1 },
+  //   { name:'定语从句', duration:2 },
+  //   { name:'状语从句', duration:2 },
+  //   { name:'虚拟', duration:1 },
+  //   { name:'倒装', duration:1 },
+  //   { name:'强调', duration:1 },
+  //   { name:'断开长难句-标点', duration:1 },
+  //   { name:'断开长难句-连接词', duration:1 },
+  //   { name:'分析主谓', duration:1 },
+  //   { name:'简化长难句', duration:1 },
+  //   { name:'分裂结构', duration:1 },
+  //   { name:'嵌套结构', duration:1 },
+  //   { name:'平行结构', duration:1 },
   // ];
+  const defaultTasks=[
+    { name:'行列式', duration:4 },
+    { name:'矩阵', duration:5 },
+    { name:'向量', duration:5 },
+    { name:'线性方程组', duration:5 },
+    { name:'特征值与特征向量', duration:5 },
+    { name:'二次型', duration:5 },
+    { name:'函数、极限、连续', duration:4 },
+    { name:'一元函数微分学', duration:4 },
+    { name:'一元函数积分学', duration:4 },
+    { name:'多元函数微分学', duration:4 },
+    { name:'二重积分', duration:4 },
+    { name:'常微分方程', duration:4 }
+  ];
 
   function createTaskRow(name='', duration=1){
     const wrap=document.createElement('div'); wrap.className='task-row';
@@ -148,18 +148,18 @@
   (function initDefaults(){ defaultTasks.forEach(t=>createTaskRow(t.name,t.duration)); })();
 
   // 轮数说明管理
-  const defaultRoundTexts=[
-    '书&笔记', '视频&笔记', '笔记&课后训练', '笔记', '笔记', '笔记'
-  ];
   // const defaultRoundTexts=[
-  //   '书，例题+公式',
-  //   '辅导讲义/18讲 公式+例题',
-  //   '660题',
-  //   '基础真题1',
-  //   '提高真题1',
-  //   '基础真题2',
-  //   '提高真题2'
+  //   '书&笔记', '视频', '笔记&课后训练', '笔记', '笔记', '笔记'
   // ];
+  const defaultRoundTexts=[
+    '书',
+    '辅导讲义/18讲',
+    '660题',
+    '基础1',
+    '提高1',
+    '基础2',
+    '提高2'
+  ];
 
   function addRoundInput(val='第n轮'){
     const div=document.createElement('div'); div.style.display='flex'; div.style.alignItems='center'; div.style.gap='4px';
