--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -48,6 +48,7 @@
     </div>
 
     <label>复习周期（逗号分隔，表示同一个任务各次复习之间的间隔天数）:
+<!-- 数学：加入总结后： 0,2,4,0,7,16,16      -->
         <input type="text" id="review-days" value="0,2,4,7,16,16" style="width:320px;">
     </label>
 
@@ -155,10 +156,11 @@
     '书',
     '辅导讲义/18讲',
     '660题',
-    '基础1',
-    '提高1',
-    '基础2',
-    '提高2'
+    '基础',
+    '总结',
+    '提高',
+    '660题第二遍',
+    '提高第二遍'
   ];
 
   function addRoundInput(val='第n轮'){
