feat: add 016 write

--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -152,7 +152,7 @@
 
   // 轮数说明管理
   const defaultRoundTexts=[
-    '书&笔记', '视频', '笔记&课后训练', '笔记', '笔记', '笔记'
+    '书&笔记', '视频', '笔记&Book训练', '笔记', '笔记&App训练', '笔记'
   ];
   // const defaultRoundTexts=[
   //   '书',
