--- a/utils/html/generate-forgetting-curve-with-task-duration.html
+++ b/utils/html/generate-forgetting-curve-with-task-duration.html
@@ -146,7 +146,7 @@
         { name:'平行结构', duration:2 },
       ],
       rounds: ['书&笔记', {label: '视频', duration: 1}, {label: '笔记&Book训练', duration: 1}, { label: '笔记', duration: 1 }, {label: '笔记&App训练', duration: 1}, {label: '笔记', duration: 1}],
-      restDays: '2025-08-27,2025-08-29,2025-08-30,2025-09-02,2025-09-05,2025-09-06,2025-09-09,2025-09-13,2025-09-20,2025-09-25,2025-09-30,2025-10-01,2025-10-02,2025-10-03,2025-10-04,2025-10-05,2025-10-07,2025-10-10,2025-10-18,2025-10-25'
+      restDays: '2025-08-27,2025-08-29,2025-08-30,2025-09-02,2025-09-05,2025-09-06,2025-09-09,2025-09-13,2025-09-14,2025-09-20,2025-09-25,2025-09-30,2025-10-01,2025-10-02,2025-10-03,2025-10-04,2025-10-05,2025-10-07,2025-10-10,2025-10-18,2025-10-25'
     },
     math: {
       startDate: '2025-08-11',
